
// version
syntax = "proto3";

// package
option go_package = "./pb";
package user;
message LoginRequest {
  string email = 1;
  string password = 2;
}

message RegisterRequest {
    string username = 1;
    string password = 2;
    string email = 3;
    string code = 5;
}
message ResetPassword {
  string code = 1;
  string email = 2;
  string password = 3;
}


// verify email
message EmailVerifyRequest {
    string email = 1;
}

message EmailVerifyCode {
      string email = 1;
     string code = 2;
}

message Response {
    int32 code  = 1;
    string message = 2;
}

message LoginResponse {
  int32 code = 1;
  uint32 id = 2;
  string username = 3;
  string line = 4;
  string avatar = 5;
  string email = 6;
  string message = 7;
  string token = 8;
}
